# Noether

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  contracts.json
.claude/: settings.local.json
contracts/: Cargo.toml
contracts/market/: Cargo.toml
contracts/market/src/: funding.rs  lib.rs  liquidation.rs  position.rs  storage.rs  trading.rs
contracts/market/test_snapshots/test/: test_initialize.1.json  test_leverage_check.1.json
contracts/mock_oracle/: Cargo.toml
contracts/mock_oracle/src/: lib.rs
contracts/noether_common/: Cargo.toml
contracts/noether_common/src/: errors.rs  lib.rs  math.rs  types.rs
contracts/oracle_adapter/: Cargo.toml
contracts/oracle_adapter/src/: external.rs  lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: glp.rs  lib.rs  storage.rs
frontend/app/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/: interactive-trading-chart.tsx  order-book.tsx  portfolio-pnl-chart.tsx  positions-tabs.tsx  recent-trades.tsx  trading-chart.tsx
frontend/components/ui/: sidebar.tsx
frontend/hooks/: useBalances.ts  useMarket.ts  usePrice.ts
frontend/lib/: deployed_contracts.json
scripts/: build_contracts.sh  deploy_testnet.sh  env.example.txt  init_market.sh  keeper.ts  package.json  setup_and_deploy.sh  tsconfig.json
scripts/keeper/: .env.example  package-lock.json  package.json
scripts/keeper/src/: config.ts  deploy-test-token.ts  index.ts  seed-oracle.ts  stellar.ts  types.ts
shared/errors/: Cargo.toml
shared/types/: Cargo.toml
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/faucet/: page.tsx
web/app/trade/: page.tsx
web/app/vault/: page.tsx
web/components/faucet/: AmountCard.tsx  ClaimHistory.tsx  ClaimSection.tsx  HowItWorks.tsx  TrustlineSection.tsx  index.ts
web/components/landing/: CompetitionBanner.tsx  FeaturesGrid.tsx  Footer.tsx  GettingStarted.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  NoetherLogo.tsx  StarsBackground.tsx  StatsStrip.tsx  TradersSection.tsx  UserSegments.tsx  VaultSection.tsx  index.ts  landing.css
web/components/layout/: Header.tsx
web/components/portfolio/: AccountHealth.tsx
web/components/trading/: AssetSelector.tsx  ChartHeader.tsx  OrderPanel.tsx  PositionsList.tsx  TradeHistory.tsx  TradingChart.tsx  index.ts
web/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  Slider.tsx  Spinner.tsx  Tabs.tsx  Tooltip.tsx  index.ts
web/components/vault/: StatsBar.tsx
web/components/wallet/: ConnectButton.tsx  WalletProvider.tsx  index.ts
web/lib/: utils.ts
web/lib/hooks/: index.ts  useFaucet.ts  usePriceData.ts  useWallet.ts
web/lib/stellar/: client.ts  faucet.ts  index.ts  market.ts  (+3 more)
web/scripts/: auto-update-oracle.ts  fix-vault-auth.ts
web/types/: chart.ts  contracts.ts  index.ts
(+13 files in other folders)
