[workspace]
resolver = "2"
members = [
    "noether_common",
    "mock_oracle",
    "oracle_adapter",
    "vault",
    "market",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/y4hyya/noether"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"
noether_common = { path = "noether_common" }

[profile.release]
opt-level = "z"           # Optimize for size (critical for WASM)
lto = true                # Link-time optimization
codegen-units = 1         # Single codegen unit for better optimization
panic = "abort"           # Smaller binary, no unwinding
strip = "symbols"         # Remove debug symbols

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
