[package]
name = "noether-market"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
soroban-token-sdk.workspace = true
noether_common = { path = "../noether_common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-token-sdk.workspace = true

