[package]
name = "mock_oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true
noether_common = { path = "../noether_common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }






